# youcruit-target-bigquery

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
target_bigquery/: avro.py  bq.py  sinks.py  target.py
target_bigquery/tests/: test_batch.py  test_core.py  test_nested.py  test_options.py  test_utils.py
target_bigquery/tests/integration/: int_utils.py  test_batch.py  test_intbatch.py
target_bigquery/tests/resources/: batch_nopq_three.jsonl  batch_one.jsonl  batch_three.jsonl  messages_with_three_streams.jsonl  nested.jsonl  records_one_stream.jsonl
